--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,8 @@ android {
 dependencies {
 
     def jetpack_navigation_version = "2.3.1"
-    def jetpack_room_version = "2.2.5"
+    def jetpack_room_version = "2.3.0-alpha01"
+    def jetpack_paging_version = "3.0.0-alpha08"
     def glide_version = "4.11.0"
     def retrofit_version = "2.9.0"
     def dagger_version = "2.29.1"
@@ -88,6 +89,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$jetpack_room_version"
     kapt "androidx.room:room-compiler:$jetpack_room_version"
     implementation "androidx.room:room-ktx:$jetpack_room_version"
+
+    // Paging library
+    implementation "androidx.paging:paging-runtime:$jetpack_paging_version"
 
     // Testing
     testImplementation 'junit:junit:4.13.1'
