--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,9 @@ android {
 dependencies {
 
     def jetpack_navigation_version = "2.3.1"
-    def jetpack_room_version = "2.3.0-alpha01"
+    def jetpack_room_version = "2.3.0-alpha03"
     def jetpack_paging_version = "3.0.0-alpha08"
+    def jetpack_lifecycle_version = "2.2.0"
     def glide_version = "4.11.0"
     def retrofit_version = "2.9.0"
     def dagger_version = "2.29.1"
@@ -62,12 +63,10 @@ dependencies {
     // Jetpack
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation "androidx.fragment:fragment-ktx:1.2.5"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -81,17 +80,22 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
+    // Jetpack Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$jetpack_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$jetpack_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$jetpack_lifecycle_version"
+
     // Jetpack Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$jetpack_navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$jetpack_navigation_version"
 
     // Jetpack Room
     implementation "androidx.room:room-runtime:$jetpack_room_version"
-    kapt "androidx.room:room-compiler:$jetpack_room_version"
     implementation "androidx.room:room-ktx:$jetpack_room_version"
+    kapt "androidx.room:room-compiler:$jetpack_room_version"
 
     // Paging library
-    implementation "androidx.paging:paging-runtime:$jetpack_paging_version"
+    implementation "androidx.paging:paging-runtime-ktx:$jetpack_paging_version"
 
     // Testing
     testImplementation 'junit:junit:4.13.1'
