--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
