--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.michaellaguerre.homeassignment.utilities.MainTestRunner"
     }
 
     buildTypes {
@@ -50,10 +50,11 @@ dependencies {
 
     def jetpack_navigation_version = "2.3.1"
     def jetpack_room_version = "2.3.0-alpha03"
-    def jetpack_paging_version = "3.0.0-alpha08"
+    def jetpack_paging_version = "3.0.0-alpha09"
     def jetpack_lifecycle_version = "2.2.0"
     def glide_version = "4.11.0"
     def retrofit_version = "2.9.0"
+    def ok_http_version = "4.9.0"
     def dagger_version = "2.29.1"
 
     //Kotlin
@@ -76,6 +77,7 @@ dependencies {
     // Network
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$ok_http_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -98,9 +100,16 @@ dependencies {
     // Paging library
     implementation "androidx.paging:paging-runtime-ktx:$jetpack_paging_version"
 
-    // Testing
+    // Unit Testing
     testImplementation 'junit:junit:4.13.1'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$ok_http_version"
+    testImplementation "org.hamcrest:hamcrest-library:1.3"
+
+    // Instrumented Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+
 }
